MCR-3283 Start working on PMD rule DoubleCheckedLocking